# constantine

./: .gitignore  Dockerfile  Makefile  README.md  config.yml.example  pyproject.toml
src/: main.py
tests/: test_main.py
